migrate AnyManaOfAnyColorEffect